--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,15 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+
+<svg style="display:none">
+<symbol viewBox="0 0 17 13" id="icon-mail">
+    <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+</symbol>
+</svg>
+
+
+
     <header class="page-header">
       <a class="page-header__logo">
        <picture>
@@ -64,7 +73,14 @@
       <div class="owner__wrapper">
         <legend class="owner__legend">Контактные данные (владельца кота)</legend>
         <div class="owner__container">
-        <label class="owner__email" for="email">e-mail:<sup>*</sup></label>
+        <label class="owner__email" for="email">e-mail:<sup>*</sup>
+
+
+        <svg class="owner__email-icon" width="17" height="13"><use xlink:href="#icon-mail"></use></svg>
+        </label>
+
+
+
         <input class="owner__email-input" id="email" name="email" type="email" placeholder="Kuklachev@gmail.com">
         <label class="owner__tel" for="tel">телефон:<sup>*</sup></label>
         <input class="owner__tel-input" id="tel" name="tel" type="tel" placeholder="8 (960) 900-60-90" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
