--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-       <picture>
+        <picture>
         <source media="(min-width: 1220px)" srcset="../img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
         <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
@@ -35,6 +35,15 @@
       <section class="description">
         <h1 class="description__title">Функциональное питание для котов</h1>
         <p class="description__paragraph">Занялся собой? Займись котом!</p>
+        <picture>
+          <source type="image/webp" media="(min-width: 1220px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
+
+          <source media="(min-width: 1220px)" srcset="img/index-can-desktop@1x.jpg 1x, img/index-can-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
+          <img class="description__feedstuff" width="280" height="271" alt="Баска с кормом" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x">
+        </picture>
         <a href="form.html" class="description__link">Подобрать программу</a>
       </section>
       <section class="programs">
@@ -76,13 +85,21 @@
   <div class="example__desktop-grid2">
       <div class="example__images slider__list">
     <picture>
-      <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+      <source type="image/webp" media="(min-width: 1220px)" srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
+      <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
+      <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
+
+      <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
       <img class="slider__slide1" src="../img/before-mobile@1x.png" srcset="../img/before-mobile@2x.png 2x" width="320" height="240" alt="Упитанный кот">
     </picture>
       <!--
     <picture>
-      <source media-"(min-width: 1220px)" srcset="../img/after-desktop@1x.png 1x, img/after-mobile@2x.png 2x">
+      <source type="image/webp" media="(min-width: 1220px)" srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
+      <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
+      <source type="image/webp" srcset="img/after-mobile@1x.webp 1x, img/after-mobile@2x.webp 2x">
+
+      <source media="(min-width: 1220px)" srcset="../img/after-desktop@1x.png 1x, img/after-mobile@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
       <img class="slider__slide2" src="../img/after-mobile@1x.png" srcset="../img/after-mobile@2x.png 2x" width="320" height="240" alt="Похудевший Борис">
     </picture>
@@ -103,6 +120,10 @@
     </div>
       <a class="page-footer__map">
       <picture>
+        <source type="image/webp" media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
+        <source type="image/webp" srcset="img/time1.webp 1x, img/time2.webp 2x">
+
         <source media="(min-width: 1220px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
         <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
         <img class="page-footer__map-image" src="../img/time.png" srcset="../img/time2.png 2x" width="318" height="361" alt="наш адресс">
@@ -134,3 +155,5 @@
     <script src="js/nav-toggle.js"></script>
   </body>
 </html>
+
+
