--- a/source/form.html
+++ b/source/form.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body>
+
+    <div style="display:none">
+      <include src="build/img/sprite.svg"></include>
+    </div>
 
 <svg style="display:none">
 <symbol viewBox="0 0 17 13" id="icon-mail">
-    <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+    <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"></path>
 </symbol>
 <symbol viewBox="0 0 20 20" id="icon-phone">
-<path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
-  <path
-    d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+<path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"></path>
+  <path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
   c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
   C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
-  C7.8,20,8.1,19.7,8.1,19.4z"/>
+  C7.8,20,8.1,19.7,8.1,19.4z"></path>
 </symbol>
 </svg>
 
@@ -68,7 +72,7 @@
       </fieldset>
       <fieldset class="form-programs">
       <div class="form-programs__wrapper">
-        <input class="form-programs__input visually-hidden" name="programs" type="radio" id="slim" checked>
+        <input class="form-programs__input visually-hidden" name="programs" type="radio" id="slim" checked="">
         <label class="form-programs__label" for="slim">похудение</label>
         <input class="form-programs__input visually-hidden" name="programs" type="radio" id="mass-set">
         <label class="form-programs__label" for="mass-set">набор массы</label>
@@ -102,7 +106,7 @@
       <div class="additionally__wrapper">
         <legend class="additionally__legend">Дополнительно</legend>
       <div class="additionally__container">
-        <input class="additionally__substitute-input visually-hidden" name="substitute" type="checkbox" id="substitute" checked>
+        <input class="additionally__substitute-input visually-hidden" name="substitute" type="checkbox" id="substitute" checked="">
         <label class="additionally__substitute" for="substitute">сахарозаменитель</label>
         <input class="additionally__water-input visually-hidden" name="water" type="checkbox" id="water">
         <label class="additionally__water" for="water">питьевая вода</label>
