--- a/source/index.html
+++ b/source/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body>
 
-  <svg style="display: none">
+  <div style="display:none">
+    <include src="build/img/sprite.svg"></include>
+  </div>
+
+  <svg style="display:none">
     <symbol viewBox="0 0 25 11" id="right-long">
-      <polygon class="st0" points="17.6,0 24.2,5.5 17.6,11 17.6,6.6 0,6.6 0,4.4 17.6,4.4 "/>
+      <polygon class="st0" points="17.6,0 24.2,5.5 17.6,11 17.6,6.6 0,6.6 0,4.4 17.6,4.4 "></polygon>
     </symbol>
     <symbol viewBox="0 0 32 11" id="right-longer">
-      <polygon class="st0" points="25.4,0 32,5.5 25.4,11 25.4,6.6 0,6.6 0,4.4 25.4,4.4 "/>
+      <polygon class="st0" points="25.4,0 32,5.5 25.4,11 25.4,6.6 0,6.6 0,4.4 25.4,4.4 "></polygon>
     </symbol>
     <symbol viewBox="0 0 70 97" id="cat-slim">
-      <path
-      d="M54.8,0c-0.1,0-0.3,0-0.4,0c-0.7,0.4-1.1,0.9-1.4,1.6c-0.6,1.1-1,2.3-1.3,3.4c-0.2,0.8-0.7,1.2-1.5,1.3
+      <path d="M54.8,0c-0.1,0-0.3,0-0.4,0c-0.7,0.4-1.1,0.9-1.4,1.6c-0.6,1.1-1,2.3-1.3,3.4c-0.2,0.8-0.7,1.2-1.5,1.3
     c-2.3,0.4-4,1.7-5.2,3.7c-0.7,1.3-1.3,2.6-1.8,3.9c-1.4,3.7-2.5,7.5-3.8,11.2C38.7,27,38.6,27,36.7,27c-2.3,0-2.1-0.4-2.1,2.1
     c0,0.8,0.2,1.2,1.1,1.2c0.3,0,0.7-0.1,0.8,0.2c0.1,0.3-0.2,0.5-0.4,0.7c-1.2,1.3-2.7,2-4.3,2.4c-1.9,0.5-3.8,0.9-5.7,1.5
     c-4.7,1.6-9.1,3.8-12.6,7.6c-2.1,2.3-3.5,5-4.7,7.8C5,59.2,3.2,68.3,1.8,77.5c-0.6,4.3-1.1,8.6-1.5,13C0.2,92.7,0,94.8,0,97
@@ -29,11 +33,10 @@
     c1.2-2.1,2.2-4.3,3.4-6.5c0.9-1.7,1.1-3.4,0.4-5.2c-0.3-0.7-0.5-1.4-0.9-2.1c-1-2-2-3.9-2.9-5.9c-0.5-1-0.4-1.1,0.7-1.1
     c1.6,0,1.6,0,1.7-1.6c0-0.2,0-0.4,0-0.7c0-0.7-0.3-1.1-1-1c-0.5,0-1,0-1.5,0c-0.7,0-0.9-0.3-0.7-1c0.6-2.3,2.8-4.1,5.1-4.4
     c2.2-0.3,4.4,0,6.6,0.4c0.6,0.1,1,0,1.3-0.6c0.4-1,0.8-2,1.3-3c0.2-0.4,0.2-0.8-0.1-1.1C66.6,13.2,63.1,9.4,58.4,7
-    c-0.5-0.3-0.8-0.6-0.9-1.1c-0.3-1.4-0.7-2.8-1.3-4.2C55.9,1,55.6,0.4,54.8,0z"/>
+    c-0.5-0.3-0.8-0.6-0.9-1.1c-0.3-1.4-0.7-2.8-1.3-4.2C55.9,1,55.6,0.4,54.8,0z"></path>
     </symbol>
     <symbol viewBox="0 0 134 56" id="cat-pro">
-      <path
-      d="M123.1,5.8c1.2-1.9,2.7-3.4,4.5-4.6c1-0.7,1.6-0.7,2.2,0.6c0.8,1.9,1.5,3.9,0.9,6c-0.2,0.8-0.1,1.4,0.4,2.1
+      <path d="M123.1,5.8c1.2-1.9,2.7-3.4,4.5-4.6c1-0.7,1.6-0.7,2.2,0.6c0.8,1.9,1.5,3.9,0.9,6c-0.2,0.8-0.1,1.4,0.4,2.1
     c0.6,0.8,1.1,1.6,1.6,2.3c1.3,1.9,1.8,3.9,0.9,6.2c-0.4,1-0.4,2-0.2,3.1c0.2,1,0.2,2,0,3c-0.3,1.6-1.1,2.7-2.7,3.2
     c-1.3,0.3-2.4,0.9-3.2,2c-0.2,0.3-0.5,0.5-0.9,0.5c-1.2,0.2-4.2-2.5-4.2-3.7c0-0.2,0-0.4,0-0.6c0.1-3.6-0.1-3.9-3.4-5.4
     c-0.7-0.3-1.3-0.6-1.8-1.2c-0.6-0.8-1.4-0.7-2.3-0.4c-0.8,0.4-1.4,0.9-1.3,1.9c0.3,2.4,0.4,4.8,0.3,7.3c0,0.3,0.1,0.6,0.2,0.8
@@ -51,7 +54,7 @@
     c-2.9,2.7-6.2,4.6-10.3,4.9C3.1,32.5-0.3,28.4,0,21.8c0.1-2.3,0.9-4.4,2.4-6.1c1.2-1.3,2.6-2,4.5-1.5c1.5,0.4,1.9,1.2,1.3,2.7
     c-0.3,0.6-0.7,1.1-1,1.7c-0.4,0.6-0.8,1.3-1,2c-1.1,3,0.4,5.1,3.5,5.4c3.3,0.3,6-1.1,8.5-3.1c3-2.4,5.7-5.2,8-8.3
     c3.7-4.8,8.5-7.3,14.4-8.1c2.3-0.3,4.3-1.3,6.5-1.9c4.1-1.2,8.3-1.9,12.7-1.8c2,0.1,3.9-0.3,5.8-1.1c4.9-2,10-2,15.1-1
-    c4,0.8,8,1.8,11.9,2.8c2.2,0.5,4.7,0.3,7-0.2c4.4-1,8.9-1.9,13.4-2c3-0.1,5.9,0.4,8.6,1.7C123.6,3.9,123.6,3.9,123.1,5.8z"/>
+    c4,0.8,8,1.8,11.9,2.8c2.2,0.5,4.7,0.3,7-0.2c4.4-1,8.9-1.9,13.4-2c3-0.1,5.9,0.4,8.6,1.7C123.6,3.9,123.6,3.9,123.1,5.8z"></path>
     </symbol>
   </svg>
 
