--- a/source/index.html
+++ b/source/index.html
@@ -73,13 +73,13 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Главная</a>
+            <a class="main-nav__link main-nav__link--active main-nav__link--active--index main-nav__link--index">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a href="catalog.html" class="main-nav__link">Каталог продукции</a>
+            <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html" class="main-nav__link">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--index" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -97,7 +97,7 @@
           <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
           <img class="description__feedstuff" width="280" height="271" alt="Баска с кормом" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x">
         </picture>
-        <a href="form.html" class="description__link">Подобрать программу</a>
+        <a href="form.html" class="description__link button">Подобрать программу</a>
       </section>
       <section class="programs">
         <ul class="programs__list">
