--- a/source/index.html
+++ b/source/index.html
@@ -217,7 +217,7 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--index main-nav__link--index--active">Главная</a>
+            <a class="main-nav__link main-nav__link--active main-nav__link--main-act">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
