--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,7 @@
     <link rel="preload" href="/fonts/oswaldregular.woff2" as="font">
   </head>
 
-  <body>
-
+  <body class="index">
 
     <div style="display: none">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol id="icon-cat-pro" viewBox="0 0 134 56">
@@ -314,7 +313,7 @@
             </div>
             <div class="example__toggles slider__toggles">
               <button class="slider__toggle slider__toggle--btn1" type="button">Было</button>
-              <div class="slider__out-scale"><button class="slider__into-scale"></button></div>
+              <div class="slider__out-scale"><button class="slider__into-button"></button><span class="slider__into-scale"></span></div>
               <button class="slider__toggle slider__toggle--btn2" type="button">Стало</button>
             </div>
           </div>
