--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,9 +28,9 @@
     <header class="page-header">
       <a class="page-header__logo" href="index.html">
         <picture>
-          <source media="(min-width: 1300px)" srcset="../img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="../img/logo-tablet.svg">
-          <img class="page-header__logo-image" src="../img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
       <nav class="main-nav main-nav--closed main-nav--nojs">
